==> ShimmerResearch/shimmer3r-firmware/LogAndStream_Shimmer3R/Shimmer_Driver/RN42/RN42.c <==
#include "RN42.h"
#include "hal_Power.h"
#include <ctype.h>
#include <stdio.h>
#include <stdlib.h> /* strtoul */
#include <string.h>

void initRN()
{
  GPIO_InitTypeDef GPIO_InitStruct;
  //powerup state is reset == low (true); mike conrad of roving networks sez:
  //wait about 1s to 2s after reset toggle
  HAL_GPIO_WritePin(BT_GPIO_FACTORY, BT_PIN_FACTORY, GPIO_PIN_RESET); //FACTORY
  HAL_GPIO_WritePin(BT_GPIO_CTS, BT_PIN_CTS, GPIO_PIN_RESET);         //CTS
  //RSTN PC1
  HAL_GPIO_WritePin(BT_GPIO_RSTN, BT_PIN_RSTN, GPIO_PIN_SET);   //RST_N
  HAL_GPIO_WritePin(BT_GPIO_POWER, BT_PIN_POWER, GPIO_PIN_SET); //POWER
  //wait 2s
  HAL_Delay(2000);

  //UART_RTS interrupt: RTS raises when BT has trans overflow
  //PIO2_CONNECT interrupt
  if (deInit)
  {
    /*Configure GPIO pins : BT_RTS_Pin BT_STAT_Pin */
    GPIO_InitStruct.Pin = BT_PIN_RTS | BT_PIN_STATUS; //RTS, STATUS
    GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(BT_GPIO_RTS, &GPIO_InitStruct);
    deInit = 0;
  }

  //CTS PB4
  //toggling cts wakes it up
  HAL_GPIO_WritePin(BT_GPIO_CTS, BT_PIN_CTS, GPIO_PIN_SET); //CTS
  //wait 5ms (assuming 24MHz MCLK)
  HAL_Delay(5);
  HAL_GPIO_WritePin(BT_GPIO_CTS, BT_PIN_CTS, GPIO_PIN_RESET); //CTS
}

void disableRN(UART_HandleTypeDef *huart)
{
  //hold in reset
  //P4OUT &= ~BIT4;                        //Shimmer3 board
  HAL_GPIO_WritePin(BT_GPIO_RSTN, BT_PIN_RSTN, GPIO_PIN_RESET);

  HAL_UART_DeInit(huart);

  //P1IE &= ~BIT3;                         //disable RTS interrupt
  //P1IE &= ~BIT0;                         //disable Connection interrupt
  /*Configure GPIO pins : BT_RTS_Pin BT_STAT_Pin */
  HAL_GPIO_DeInit(BT_GPIO_RTS, BT_PIN_RTS);                       //RTS
  HAL_GPIO_DeInit(BT_GPIO_STATUS, BT_PIN_STATUS);                 //STATUS
  HAL_GPIO_WritePin(BT_GPIO_POWER, BT_PIN_POWER, GPIO_PIN_RESET); //POWER
  deInit = 1;
}

void BT_init(UART_HandleTypeDef *huart, uint8_t (*receiveFuncPtr)(uint8_t *data))
{

  //Turn on power (SW_BT P4.3 on Shimmer3)
  //P4OUT |= BIT3;

  bt_txBufLen = 0;
  setTempBaudRateStep = 0;
  setCommandsStep = 0;
  newMode = 0;
  radioMode = SLAVE_MODE;
  discoverable = 1;
  authenticate = 0;
  encrypt = 0;
  resetDefaultsRequest = 0;
  setNameRequest = 0;
  setFriendlyNameRequest = 0;
  setPINRequest = 0;
  setSvcClassRequest = 0;
  setSvcNameRequest = 0;
  setDevClassRequest = 0;
  setRawBaudrate = 0;
  disableRemoteConfig = 0;
  setCustomInquiryTime = 0;
  setCustomPagingTime = 0;
  setBaudrate = 0;
  newAuthMode = 0;
  txIe = 0;
  slowRate = 0;
  *rn42Mac = '\0';

  huart_BT = huart;
  BtExtCb = receiveFuncPtr;

  //connect/disconnect commands
  deviceConn = btConnected = 0;

  *expectedCommandResponse = '\0'; //NULL pointer
  charsReceived = 0;
  transmissionOverflow = messageInProgress = 0;

  initRN();

  //HAL_UART_Receive_DMA(huartDock, uartDockRxBuf, 1);

  btConfiguring = 0;
  BT_setupUART("115K");
}

void BT_configure()
{
  HAL_Delay(15);
  setCommandsStart();
  while (setCommandsStep)
  {
    //Power_SleepUntilInterrupt();
    HAL_Delay(100);
  }
}

HAL_StatusTypeDef BT_write(uint8_t *buf, uint8_t len)
{
  HAL_StatusTypeDef ret_val;
  memcpy(bt_txBuf, buf, len);
  ret_val = HAL_UART_Transmit_DMA(huart_BT, bt_txBuf, len);
  if (ret_val == HAL_OK)
  {
    PeriStat_Set(STAT_PERI_BT);
  }
  return ret_val;
}

void BT_setTempBaudRate(char *baudRate)
{
  if ((strlen(baudRate) == 4)
      && (!strncmp(baudRate, "1200", 4) || !strncmp(baudRate, "2400", 4)
          || !strncmp(baudRate, "4800", 4) || !strncmp(baudRate, "9600", 4)
          || !strncmp(baudRate, "19.2", 4) || !strncmp(baudRate, "38.4", 4)
          || !strncmp(baudRate, "57.6", 4) || !strncmp(baudRate, "115K", 4)
          || !strncmp(baudRate, "230K", 4) || !strncmp(baudRate, "460K", 4)
          || !strncmp(baudRate, "921K", 4)))
  {

    sprintf(commandbuf, "U,%s,N\r", baudRate);

    //setTempBaudRateStart();
    setTempBaudRateStep = 1;
    writeCommand("$$$", "CMD\r\n");
    while (setTempBaudRateStep != 2)
    {
      Power_SleepUntilInterrupt();
    }
    //if(setCommandsStep == 2)
    if (slowRate)
    {
      writeCommandNoRsp(commandbuf);
      setTempBaudRateStep = 0;
      HAL_Delay(200);
    }
    else
    {
      writeCommand(commandbuf, "AOK\r\n");
    }
    while (setTempBaudRateStep != 3)
    {
      Power_SleepUntilInterrupt();
    }
    setTempBaudRateStep = 0;
    HAL_Delay(100);
    BT_setupUART(baudRate);
    BT_setRxLen(1);
    if (!strncmp(baudRate, "1200", 4) || !strncmp(baudRate, "2400", 4))
    {
      slowRate = 1;
    }
    else
    {
      slowRate = 0;
    }
  }
}
