==> ShimmerResearch/shimmer3/apps/BtStream/Bluetooth/RN42.c <==
#include "msp430.h"
#include "RN42.h"
#include <string.h>
#include <ctype.h>
#include <stdio.h>

void initRN() {
   // powerup state is reset == low (true); mike conrad of roving networks sez:
   // wait about 1s to 2s after reset toggle
   P4OUT |= BIT4;             //Shimmer3
   __delay_cycles(48000000);  //wait 2s (assuming 24MHz MCLK)

   //UART_RTS interrupt: RTS raises when BT has trans overflow
   P1IES &= ~BIT3;            //can assume initially low as module is in reset so watch for low to high transition
   P1IFG &= ~BIT3;            //clear flag
   P1IE |= BIT3;              //enable interrupt
   //PIO2_CONNECT interrupt
   P1IES &= ~BIT0;            //can assume initially low as module is in reset so watch for low to high transition
   P1IFG &= ~BIT0;            //clear flag
   P1IE |= BIT0;              //enable interrupt

   P2OUT &= ~BIT2;            //toggling cts wakes it up
   P2OUT |= BIT2;
   __delay_cycles(120000);    //wait 5ms (assuming 24MHz MCLK)
   P2OUT &= ~BIT2;
}

void disableRN() {
   //hold in reset
   P4OUT &= ~BIT4;                        //Shimmer3 board
   disableUART();
   P1IE &= ~BIT3;                         //disable RTS interrupt
   P1IE &= ~BIT0;                         //disable Connection interrupt
}

void BT_init() {
   messageInProgress = transmissionOverflow = 0; //false

   //Turn on power (SW_BT P4.3 on Shimmer3)
   P4OUT |= BIT3;

   newMode = 0;
   radioMode = SLAVE_MODE;
   discoverable = 1;
   authenticate = 0;
   encrypt = 0;
   resetDefaultsRequest = 0;
   setNameRequest = 0;
   setFriendlyNameRequest = 0;
   setPINRequest = 0;
   setSvcClassRequest = 0;
   setSvcNameRequest = 0;
   setDevClassRequest = 0;
   setRawBaudrate = 0;
   disableRemoteConfig = 0;
   setCustomInquiryTime = 0;
   setCustomPagingTime = 0;
   setBaudrate = 0;
   newAuthMode = 0;
   txIe = 0;
   slowRate = 0;

   //connect/disconnect commands
   deviceConn = btConnected = 0;

   *expectedCommandResponse = '\0';   //NULL pointer
   charsReceived = 0;
   transmissionOverflow = messageInProgress = 0;

   initRN();

   setupUART("115K");
}

void BT_configure() {
   __delay_cycles(360000); //wait for 15ms (assuming 24MHz MCLK) why???
   runSetCommands();
}

uint8_t BT_write(uint8_t *buf, uint8_t len) {
   if(messageInProgress)
      return 0;   //fail

   charsSent = 0;
   memcpy(messageBuffer, buf, len);
   messageLength = len;

   if(!transmissionOverflow) {
      messageInProgress = 1;
      sendNextChar();
      return 1;   //success
   } else {
      return 0;   //fail
   }
}

void BT_setTempBaudRate(char * baudRate) {
   if((strlen(baudRate)==4) && (!strncmp(baudRate, "1200", 4) || !strncmp(baudRate, "2400", 4) ||
         !strncmp(baudRate, "4800", 4) || !strncmp(baudRate, "9600", 4) || !strncmp(baudRate, "19.2", 4) ||
         !strncmp(baudRate, "38.4", 4) || !strncmp(baudRate, "57.6", 4) || !strncmp(baudRate, "115K", 4) ||
         !strncmp(baudRate, "230K", 4) || !strncmp(baudRate, "460K", 4) || !strncmp(baudRate, "921K", 4))) {

      saveInterruptSettings();

      writeCommand("$$$", "CMD\r\n");
      __bis_SR_register(LPM3_bits + GIE); //wait until response is received

      //Connect
      sprintf(commandbuf, "U,%s,N\r", baudRate);

      //if existing rate is 1200 or 2400 baud then something is going wrong with reading "AOK\r\n" response
      //from the RN42
      //So instead of reading response and then continuing, wait 200ms and then continue
      //("U,XXXX\r" and "AOK\r\n" is 12 characters = 120 bit @ 1200baud = 100ms
      //Double this for some processing margin)
      //TODO
      if(slowRate) {
         UCA1IE &= ~UCRXIE;                  //Disable USCI_A1 RX interrupt
         writeCommandNoRsp(commandbuf);
         __delay_cycles(4800000);            //wait 200ms (assuming 24MHz MCLK)
         UCA1IFG &= ~(UCSTTIFG + UCRXIFG);   //clear pending receive interrupts?
         UCA1IE |= UCRXIE;                   //Enable USCI_A1 RX interrupt
      } else {
         writeCommand(commandbuf, "AOK\r\n");
         __bis_SR_register(LPM3_bits + GIE); //wait until response is received
      }

      restoreInterruptSettings();

      //change MSP430 UART to use new baud rate
      setupUART(baudRate);
      if(!strncmp(baudRate, "1200", 4) || !strncmp(baudRate, "2400", 4)) {
         slowRate = 1;
      } else {
         slowRate = 0;
      }
   }
}
